--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -138,6 +138,13 @@ body{
 .nav-view{
   height: 528px;
   overflow-y: scroll;
+  .nav-view-tip{
+    margin-top: 90px;
+    text-align: center;
+    font-size: 14px;
+    line-height: 30px;
+    color: #fff;
+  }
 }
 .chat-item{
   width: 100%;
@@ -398,6 +405,12 @@ body{
     position: absolute;
     right: 20px;
     bottom: 20px;
+    .desc{
+      color: #999;
+      font-size: 12px;
+      margin-left: 10px;
+      margin-right: 7px;
+    }
   }
 
 
