--- a/style/sass/base/fonts.scss
+++ b/style/sass/base/fonts.scss
@@ -16,29 +16,26 @@
   vertical-align: middle;
 }
 
-.iconfont-back:before { content: "\e697"; }
+.iconfont-error:before { content: "\e66b"; }
 
-.iconfont-category:before { content: "\e699"; }
+.iconfont-infomation:before { content: "\e66c"; }
 
-.iconfont-close:before { content: "\e69a"; }
+.iconfont-close:before { content: "\e761"; }
 
-.iconfont-help:before { content: "\e6a3"; }
+.iconfont-set:before { content: "\e77f"; }
 
-.iconfont-information:before { content: "\e6a4"; }
+.iconfont-search:before { content: "\e780"; }
 
-.iconfont-less:before { content: "\e6a5"; }
+.iconfont-img:before { content: "\e781"; }
 
-.iconfont-moreunfold:before { content: "\e6a6"; }
+.iconfont-emoji:before { content: "\e782"; }
 
-.iconfont-more:before { content: "\e6a7"; }
+.iconfont-clock:before { content: "\e783"; }
 
-.iconfont-refresh:before { content: "\e6aa"; }
+.iconfont-pre:before { content: "\e784"; }
 
-.iconfont-search:before { content: "\e6ac"; }
+.iconfont-next:before { content: "\e785"; }
 
-.iconfont-set:before { content: "\e6ae"; }
+.iconfont-arrow-left:before { content: "\e786"; }
 
-.iconfont-success:before { content: "\e6b1"; }
-
-.iconfont-warning:before { content: "\e6b6"; }
-
+.iconfont-arrow-right:before { content: "\e787"; }
