--- a/style/css/base/fonts.css
+++ b/style/css/base/fonts.css
@@ -17,66 +17,61 @@
 }
 
 /* line 19, ../../sass/base/fonts.scss */
-.iconfont-back:before {
-  content: "\e697";
+.iconfont-error:before {
+  content: "\e66b";
 }
 
 /* line 21, ../../sass/base/fonts.scss */
-.iconfont-category:before {
-  content: "\e699";
+.iconfont-infomation:before {
+  content: "\e66c";
 }
 
 /* line 23, ../../sass/base/fonts.scss */
 .iconfont-close:before {
-  content: "\e69a";
+  content: "\e761";
 }
 
 /* line 25, ../../sass/base/fonts.scss */
-.iconfont-help:before {
-  content: "\e6a3";
+.iconfont-set:before {
+  content: "\e77f";
 }
 
 /* line 27, ../../sass/base/fonts.scss */
-.iconfont-information:before {
-  content: "\e6a4";
+.iconfont-search:before {
+  content: "\e780";
 }
 
 /* line 29, ../../sass/base/fonts.scss */
-.iconfont-less:before {
-  content: "\e6a5";
+.iconfont-img:before {
+  content: "\e781";
 }
 
 /* line 31, ../../sass/base/fonts.scss */
-.iconfont-moreunfold:before {
-  content: "\e6a6";
+.iconfont-emoji:before {
+  content: "\e782";
 }
 
 /* line 33, ../../sass/base/fonts.scss */
-.iconfont-more:before {
-  content: "\e6a7";
+.iconfont-clock:before {
+  content: "\e783";
 }
 
 /* line 35, ../../sass/base/fonts.scss */
-.iconfont-refresh:before {
-  content: "\e6aa";
+.iconfont-pre:before {
+  content: "\e784";
 }
 
 /* line 37, ../../sass/base/fonts.scss */
-.iconfont-search:before {
-  content: "\e6ac";
+.iconfont-next:before {
+  content: "\e785";
 }
 
 /* line 39, ../../sass/base/fonts.scss */
-.iconfont-set:before {
-  content: "\e6ae";
+.iconfont-arrow-left:before {
+  content: "\e786";
 }
 
 /* line 41, ../../sass/base/fonts.scss */
-.iconfont-success:before {
-  content: "\e6b1";
-}
-
-/* line 43, ../../sass/base/fonts.scss */
-.iconfont-warning:before {
-  content: "\e6b6";
+.iconfont-arrow-right:before {
+  content: "\e787";
 }
