--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -418,8 +418,63 @@ body{
 
 
 
+// sidebar
+//===============================================================================
+.sidebar{
+  float: left;
+  width: 330px;
+  position: relative;
+}
+.msg-history{
+  position: absolute;
+  width: 330px;
+  height: 640px;
+  .msg-history-hd{
+    height: 50px;
+    line-height: 50px;
+    padding: 0 30px;
+    border-bottom: $baseBorder;
+    @include clearfix();
+    h2{
+      display: inline-block;
+      font-size: 14px;
+      font-weight: normal;
+    }
+    .iconfont-close{
+      float: right;
+      font-size: 16px;
+      cursor: pointer;
+    }
+  }
+  .msg-history-bd{
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
 
+  // 历史消息
+  .record{
+    padding: 30px 0;
+    .record-time{
+      margin: 0 30px;
+      margin-bottom: 7px;
+      font-weight: bold;
+      line-height: 24px;
+      border-bottom: $baseBorder;
+    }
 
+    .record-lst li{
+      padding: 0 30px;
+      margin-bottom: 10px;
+      &:hover{
+        background-color: #f2f2f2;
+      }
+    }
+    .record-txt-hd{
+      color: #999;
+    }
+  }
+
+}
 
 
 
