repair chat area

--- a/style/css/base/fonts.css
+++ b/style/css/base/fonts.css
@@ -22,7 +22,7 @@
 }
 
 /* line 21, ../../sass/base/fonts.scss */
-.iconfont-infomation:before {
+.iconfont-information:before {
   content: "\e66c";
 }
 
