--- a/style/sass/base/fonts.scss
+++ b/style/sass/base/fonts.scss
@@ -18,7 +18,7 @@
 
 .iconfont-error:before { content: "\e66b"; }
 
-.iconfont-infomation:before { content: "\e66c"; }
+.iconfont-information:before { content: "\e66c"; }
 
 .iconfont-close:before { content: "\e761"; }
 
