--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -349,6 +349,7 @@ body{
     }
     .content{
       background-color: #ddeeff;
+      text-align: left;
       &:after{
         position: absolute;
         top: 13px;
@@ -363,6 +364,7 @@ body{
       text-align: left;
       .iconfont-information{
         color: red;
+        vertical-align: -1px;
       }
     }
   }
@@ -380,6 +382,20 @@ body{
   // 工具栏
   .toolbar{
     padding: 4px 17px;
+    .toolbar-item{
+      display: inline-block;
+      width: 24px;
+      height: 24px;
+      line-height: 16px;
+      padding: 3px;
+      border: 1px solid #fff;
+      border-radius: 2px;
+      text-align: center;
+      &:hover{
+        border: 1px solid #999;
+      }
+
+    }
     .iconfont{
       margin-right: 5px;
       cursor: pointer;
@@ -447,24 +463,24 @@ body{
     }
   }
   .msg-history-bd{
+    height: 525px;
+    padding: 20px 0;
     overflow-y: auto;
     overflow-x: hidden;
   }
 
   // 历史消息
   .record{
-    padding: 30px 0;
+    margin-bottom: 10px;
     .record-time{
       margin: 0 30px;
-      margin-bottom: 7px;
       font-weight: bold;
       line-height: 24px;
       border-bottom: $baseBorder;
     }
 
     .record-lst li{
-      padding: 0 30px;
-      margin-bottom: 10px;
+      padding: 7px 30px;
       &:hover{
         background-color: #f2f2f2;
       }
